# ScaleRPy

./: .gitignore  CITATION.cff  README.md  SpatGalDat.py  fit_funcs.py  pyproject.toml  scalerfit.ipynb  scalerfit_example.ipynb  vis_rel.py
src/ScaleRPy/: __init__.py  man_dat.py
src/ScaleRPy.egg-info/: PKG-INFO  SOURCES.txt
src/ScaleRPy/fitting/: fit_funcs.py
