[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ScaleRPy"
version = "0.1.0"
description = "Obtain fits to spatially resolved scaling relations using the ridge line method"
authors = [
    { name = "Bryanne McDonough", email = "br.mcdonough@northeastern.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=2.1.3",
    "matplotlib>=3.9.2",
    "scipy>="
]

[project.urls]
homepage = "https://your.project.homepage"
repository = "https://github.com/yourusername/your-repo"